# bluesky

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Gemfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/ai_assistance/: opencode.container.json.template
.devcontainer/installer/: package_info.json
.devcontainer/scripts/: README.md  certctl-safe.sh  dev-env-init.sh  hot2000  install-system-docker-cli.sh  install-system-github-cli.sh  install-system-qgis.sh  install-user-aws.sh  install-user-claude-cli.sh  install-user-github-copilot-cli.sh  install-user-nodejs.sh  install-user-opencode-cli.sh  install-user-ruby.sh  install-user-uv.sh  post-create.sh  security-scan.sh  setup_hot2000.sh
.github/: copilot-instructions.md
config/defaults/: config.template.ini
data/necb/cache/: equations_inventory.txt
data/necb/cache/figures/2017/: A-1.1.2.1.md  A-1.1.4.1.1.md  A-3.1.1.3.1.md  A-3.1.1.6.1.md  A-3.1.1.6.2.md  A-3.2.3.3.md  A-4.1.1.3.1-A.md  A-4.1.1.3.1-B.md  A-4.2.2.3.-A.md  A-4.2.2.3.-B.md  A-4.2.2.4.2.md  A-4.2.2.5.2.md  A-5.1.1.3.1.md  A-6.1.1.3.1.md  A-6.2.3.1.1.md  A-7.1.1.3.1.md  A-8.4.4.17.2.md  A-8.4.4.4.1-A.md  A-8.4.4.4.1-B.md
data/necb/cache/figures/2020/: 1.md  2.md  A-1.1.2.1.md  A-1.1.4.1.1.md  A-3.1.1.3.1.md  A-3.1.1.6.1.md  A-3.1.1.6.2.md  A-3.2.3.3.md  A-4.1.1.3.1-A.md  A-4.1.1.3.1-B.md  A-4.2.2.3.-A.md  A-4.2.2.3.-B.md  A-4.2.2.4.2.md  A-4.2.2.5.2.md  A-5.1.1.3.1.md  A-5.2.2.5.4.md  A-6.1.1.3.1.md  A-6.2.3.1.1.md  A-7.1.1.3.1.md  A-8.4.4.17.2.md
data/necb/cache/index/: 2020.json
data/necb/cache/tables/2017/: 1.3.1.2.md  3.2.2.2.md  3.2.2.3.md  3.2.2.4.md  3.2.3.1.md  3.5.1.1.md  4.2.1.5.md  4.2.3.1.-A.md  4.2.3.1.-B.md  4.2.3.1.-C.md  4.2.3.1.-D.md  4.3.2.10.-A.md  4.3.2.10.-B.md  4.3.2.7.-A.md  4.3.2.7.-B.md  4.3.2.8.md  4.3.2.9.-A.md  4.3.2.9.-B.md  4.5.1.1.md  5.2.10.1.-A.md  5.2.10.1.-B.md  5.2.10.4.md  5.2.12.1.md  5.2.12.2.md  5.2.2.3.md  5.2.2.4.md  5.2.2.5.md  5.2.3.4.md  5.2.5.3.md  5.2.6.3.md  5.3.1.1.-A.md  5.3.2.3.md  5.3.2.7.md  5.3.2.8.-A.md  5.3.2.8.-AA.md  5.3.2.8.-B.md  5.3.2.8.-C.md  5.3.2.8.-D.md  5.3.2.8.-E.md  5.3.2.8.-F.md  (+57 more)
data/necb/cache/tables/2020/: 1-1.md  1.3.1.2.md  10.1.2.1.md  10.2.1.1.md  2-1.md  3.2.2.2.md  3.2.2.3.md  3.2.2.4.md  3.2.3.1.md  3.5.1.1.md  4.2.1.5.md  4.2.3.1.-A.md  4.2.3.1.-B.md  4.2.3.1.-C.md  4.2.3.1.-D.md  4.2.3.1.-E.md  4.3.2.10.-A.md  4.3.2.10.-B.md  4.3.2.7.-A.md  4.3.2.7.-B.md  4.3.2.8.md  4.3.2.9.-A.md  4.3.2.9.-B.md  4.5.1.1.md  5.2.10.1.-A.md  5.2.10.1.-B.md  5.2.10.4.md  5.2.12.1.-A.md  5.2.12.1.-B.md  5.2.12.1.-C.md  5.2.12.1.-D.md  5.2.12.1.-E.md  5.2.12.1.-F.md  5.2.12.1.-G.md  5.2.12.1.-H.md  5.2.12.1.-I.md  5.2.12.1.-J.md  5.2.12.1.-K.md  5.2.12.1.-L.md  5.2.12.1.-M.md  (+49 more)
docs/: README.md  aws_network.md  aws_sso_setup.md  mcp.md
docs/necb/: database-validation-report.md  necb-guide.md  pdf-parsing-v2-implementation-plan.md  semantic-search.md
docs/openstudio-sdk/: geometry-patterns.md  hvac-patterns.md
docs/openstudio-sdk/api-reference/: README.md  loads-internal-gains.md  materials-constructions.md  schedules.md  simulation-settings.md  surfaces-geometry.md  thermal-zones.md
docs/ruby-gems/: README.md  buildingsync-guide.md  calibration-catalog.md  common-measures-catalog.md  ee-measures-catalog.md  load-flexibility-catalog.md  model-articulation-catalog.md
examples/: README.md
examples/01_python_hot2000_workflow/: README.md  h2k_to_energyplus.py
examples/02_ruby_necb_compliance/: README.md  create_necb_model.rb
examples/03_python_ruby_interop/: README.md  create_model.rb  runner.py
examples/data/models/: README.md
examples/data/reference/: expected_outputs.csv
scripts/: build_necb_production_database.py  scan_all_necb_tables.py  setup_anthropic_key.sh
src/bluesky/: __init__.py
src/bluesky/cli/: main.py
src/bluesky/core/: interop.py  interop.rb
src/bluesky/mcp/: README.md  openstudio_server.py
src/bluesky/mcp/data/: .gitignore
src/bluesky/mcp/evaluation/: __init__.py  evaluate_pdf_parsers.py  ground_truth.json
src/bluesky/mcp/scrapers/: __main__.py  db_builder.py  openstudio_docs_scraper.py
src/bluesky/mcp/scrapers/necb/: REGENERATE_DB.md  (+4 more)
src/bluesky/mcp/tools/: hybrid_search.py  model_config.py  vector_indexer.py
src/bluesky/mcp/validation/: __init__.py  validate_necb_parsing.py
src/bluesky/necb/: __init__.py  server.py
src/bluesky/necb/data/: necb_production.db
src/bluesky/necb/tools/: __init__.py  hybrid_search.py  model_config.py  query_understanding.py  vector_indexer.py
src/bluesky/utils/: dependencies.py
tests/integration/parser_v2/: test_marker_necb.py  test_marker_table_converter.py  test_pymupdf_necb.py
tests/unit/: test_main.py  test_py_dss_interface.py
tests/unit/parser_v2/: test_dependencies.py  test_schemas.py
(+338 files in other folders)
